Mon Feb 18 15:49:22 EET 2002  Timo Sirainen <tss@iki.fi>

	* Added proper initializations to silc's irssi code, so it's
	  now possible to load it as module.  Affected files
	  irssi/src/silc/core/silc-core.c,
	  fe-common/silc/fe-common-silc-core.[ch] and fe-text/silc.c

Sun Feb 17 19:02:56 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Merged latest Irssi (0.8.1) from the irssi.org's CVS into
	  the SILC tree.

	* Fixed the silcdoc document generator to correct generate
	  docs from all kinds of filenames.  Affected files are
	  util/robodoc/Source/generator.c, scripts/silcdoc/silcdoc

	* ROBOdoc documented lib/silcutil/silcmemory.h.
	  Added also new function silc_memdup.

	* Removed lib/silcutil/silcbufutil.h and moved those routines
	  to the lib/silcutil/silcbuffer.h.

Sun Feb 17 15:52:30 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Added `user_count' to the SilcChannelEntry which now tells the
	  number of users on the channel.  The user count is now saved
	  in normal server of global channels as well.  Affected files
	  silcd/server.c, idlist.h, packet_receive.c and command.c.

	* Splitted lib/silcutil/silcutil.[ch] into silcfileutil.[ch] to
	  include file utility functions.

	* Fixed the lib/silcsftp/sftp_fs_memory.c to use silcutil routines
	  instead of calling directly OS routines.

	* Fixed NICK change printing in Irssi SILC Client. Fixed
	  KICKED notify printing in Irssi SILC Client.  Affected file
	  irssi/src/silc/core/client_ops.c.

	* Fixed a NICK change bug in client library, to not recreate the
	  client_entry->channels hash table everytime nick is changed.
	  Affected file lib/silcclient/client.c.

Sun Feb 17 10:10:14 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* ROBOdoc documented the lib/silcske/silcske.h, and improved
	  the SKE interface a bit.

	* Fixed padding problem in PKCS#1. The padding was not actually
	  random since the random number generator was used incorrectly.