@@ -616,6 +616,11 @@ AM_CONDITIONAL(SILC_WIN32, test x$win32-support = xtrue)
 AM_CONDITIONAL(SILC_EPOC, test xfalse = xtrue)
 
 #
+# Native BeOS support (disabled by default)
+#
+AM_CONDITIONAL(SILC_BEOS, test xfalse = xtrue)
+
+#
 # IPv6 support
 #
 AC_MSG_CHECKING(for IPv6 support)
