@@ -1,0 +1,27 @@
+/*
+
+  silcbeos.h 
+
+  Author: Pekka Riikonen <priikone@silcnet.org>
+
+  Copyright (C) 2002 Pekka Riikonen
+
+  This program is free software; you can redistribute it and/or modify
+  it under the terms of the GNU General Public License as published by
+  the Free Software Foundation; version 2 of the License.
+
+  This program is distributed in the hope that it will be useful,
+  but WITHOUT ANY WARRANTY; without even the implied warranty of
+  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  GNU General Public License for more details.
+
+*/
+/* Native BeOS specific includes and definitions. */
+
+#ifndef SILCBEOS_H
+#define SILCBEOS_H
+
+#include <kernel/OS.h>
+#include <kernel/image.h>
+
+#endif /* SILCBEOS_H */
