@@ -1,0 +1,31 @@
+#
+#  Makefile.am
+#
+#  Author: Pekka Riikonen <priikone@silcnet.org>
+#
+#  Copyright (C) 2002 Pekka Riikonen
+#
+#  This program is free software; you can redistribute it and/or modify
+#  it under the terms of the GNU General Public License as published by
+#  the Free Software Foundation; either version 2 of the License, or
+#  (at your option) any later version.
+#
+#  This program is distributed in the hope that it will be useful,
+#  but WITHOUT ANY WARRANTY; without even the implied warranty of
+#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#  GNU General Public License for more details.
+#
+
+AUTOMAKE_OPTIONS = 1.0 no-dependencies foreign
+
+noinst_LIBRARIES = libsilcbeosutil.a
+
+libsilcbeosutil_a_SOURCES = 	\
+	silcbeosschedule.c	\
+	silcbeosnet.c		\
+	silcbeosutil.c		\
+	silcbeossockconn.c	\
+	silcbeosmutex.c		\
+	silcbeosthread.c
+
+include $(top_srcdir)/Makefile.defines.in
